deploy/kubernetes/ib-backend.yaml
apiVersion: v1
kind: Service
metadata:
  name: ib-backend
  labels:
    app: ib-backend
spec:
  ports:
  - port: 5000
  selector:
    app: ib
    tier: backend
  type: NodePort
---
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: ib-backend
  labels:
    app: ib
spec:
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: ib
        tier: backend
    spec:
      containers:
      - image: stouffcapital/com-stouffcapital-ib
        name: ib-backend
        ports:
        - containerPort: 5000
          name: backend
        volumeMounts:
        - name: ib-backend-persistent-storage
          mountPath: /app/reports/data
      volumes:
      - name: ib-backend-persistent-storage
        persistentVolumeClaim:
          claimName: ib-backend-pv-claim
