deploy/kubernetes/ib-mysql.yaml
apiVersion: v1
kind: Service
metadata:
  name: ib-mysql
  labels:
    app: ib
spec:
  ports:
    - port: 3306
  selector:
    app: ib
    tier: mysql
  clusterIP: None
---
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: ib-mysql
  labels:
    app: ib
spec:
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: ib
        tier: mysql
    spec:
      containers:
      - image: mysql:5.6
        name: ib-mysql
        ports:
        - containerPort: 3306
          name: mysql
        volumeMounts:
        - name: ib-mysql-persistent-storage
          mountPath: /var/lib/mysql
      volumes:
      - name: ib-mysql-persistent-storage
        persistentVolumeClaim:
          claimName: ib-mysql-pv-claim
