deploy/kubernetes/tech-stouffcapital-ib-ing-ssl.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-ib-backend
  namespace: ib
  annotations:
    ingress.kubernetes.io/ssl-redirect: "true"
    kubernetes.io/tls-acme: "true"
    certmanager.k8s.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: "nginx"

    nginx.ingress.kubernetes.io/proxy-body-size: "64m"
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "300s"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "120s"
spec:
  tls:
  - hosts:
    - ib.stouffcapital.tech
    secretName: ib-stouffcapital-service-tls
  backend:
    serviceName: default-http-backend
    servicePort: 80
  rules:
  - host: ib.stouffcapital.tech
    http:
      paths:
      - path: /
        backend:
          serviceName: ib-backend
          servicePort: 5000
